# display-colors

./: .gitignore  README.md  pyproject.toml
src/display_colors/: __main__.py  const.py  init.py
src/display_colors/cmd/: effects.py
