[tool.poetry]
name = "display-colors"
version = "0.3.0"
description = "Displays 4-bit terminal colors in different combinations"
authors     = ["Joe Rodrigue <joe.rodrigue@gmail.com>"]
maintainers = ["Joe Rodrigue <joe.rodrigue@gmail.com>"]
readme = "README.md"
packages = [{include = "display_colors", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"

[tool.poetry.scripts]
	display-colors = 'display_colors.__main__:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
